# wp-mini-next-shuttle-axum

./: README.md
.shuttle/: config.toml
src/: main.rs
wp-mini-next/: .depcheckrc  .env.example  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
wp-mini-next/src/app/: layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
wp-mini-next/src/app/about/: page.tsx
wp-mini-next/src/app/blog/: page.tsx
wp-mini-next/src/app/blog/[slug]/: page.tsx
wp-mini-next/src/app/blog/posts/: quick-start.mdx
wp-mini-next/src/app/checkout/[storyId]/: page.tsx
wp-mini-next/src/components/: Checkout.tsx  DownloadManager.tsx  Downloader.tsx  Downloading.tsx  Footer.module.scss  Footer.tsx  Header.module.scss  Header.tsx  HeadingLink.tsx  Mailchimp.tsx  ProjectCard.tsx  Providers.tsx  RouteGuard.tsx  ScrollToHash.tsx  StoryNotFound.tsx  ThemeToggle.tsx  index.ts  mdx.tsx
wp-mini-next/src/components/about/: TableOfContents.tsx  about.module.scss
wp-mini-next/src/components/blog/: Post.tsx  Posts.tsx
wp-mini-next/src/resources/: content.tsx  icons.ts  index.ts  once-ui.config.ts
wp-mini-next/src/types/: config.types.ts  content.types.ts
wp-mini-next/src/utils/: formatDate.ts  utils.ts
wp-mini-shuttle-axum/: Cargo.toml  README.md
wp-mini-shuttle-axum/src/: main.rs
