[package]
name = "wp-mini-axum"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["multipart", "http2", "macros", "ws"] }
reqwest = "0.12.23"
serde = "1.0.225"
serde_json = "1.0.145"
shuttle-axum = "0.57.0"
shuttle-runtime = "0.57.0"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
wp-mini-epub = "0.3.0-alpha.1"
