[package]
name = "wp-mini-axum"
version = "0.1.7"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["multipart", "http2", "macros", "ws"] }
percent-encoding = "2.3.2"
reqwest = "0.12.24"
serde = "1.0.228"
serde_json = "1.0.145"
shuttle-axum = "0.57.0"
shuttle-runtime = "0.57.0"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
wp-mini-epub = "0.7.4"
