[package]
name = "wp-mini-axum"
version = "0.1.9"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["http2"] }
percent-encoding = "2.3.2"
reqwest = { version = "0.12.24", default-features = false, features = ["cookies", "rustls-tls"] }
serde = "1.0.228"
serde_json = "1.0.145"
shuttle-axum = "0.57.0"
shuttle-runtime = "0.57.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
wp-mini-epub = "0.8.2"
